# dw

./: .pre-commit-config.yaml  README.md  dw.py  pyproject.toml
src/: .pre-commit-config.yaml  pyproject.toml
src/balp/: transform.py
src/dantzig_wolfe/: __init__.py  decomposition.py  master_problem.py  subproblem.py  utils.py
src/examples/: simple_example.py
src/solvers/: __init__.py  direct_solve.py
